# Kruskal

./: .gitignore  CMakeLists.txt  README.md  про коммиты.txt
code/: mainwindow.h
code/common/: Error.h  constants.h
code/demo/: demosystem.cpp  demosystem.ui
code/demo/graph/: Edge.cpp  Graph.cpp  Graph.h  Vertex.cpp
code/testing/: testing.ui  testingsettingswindow.ui  welcometotesting.h
code/testing/questions/: Question.cpp  questionwidget.ui
code/testing/stat/: statviewwidget.cpp  statviewwidget.h
code/theory/: theorysettingswindow.cpp  theorysettingswindow.h  theorysettingswindow.ui  theorysystem.ui
doc/: class.puml  component.puml  demo subsystem class.puml  general class.puml  main class.puml  testing subsystem class.puml  theory subsystem class.puml  use case.puml
doc/doxygen/: Doxyfile
doc/doxygen/html/: _edge_8cpp.html  _edge_8cpp__incl.map  _edge_8cpp__incl.md5  _edge_8h.html  _edge_8h.js  _edge_8h__dep__incl.map  _edge_8h__dep__incl.md5  _edge_8h__incl.map  _edge_8h__incl.md5  _edge_8h_source.html  _error_8h.html  _error_8h.js  _error_8h__dep__incl.map  _error_8h__dep__incl.md5  _error_8h__incl.map  _error_8h__incl.md5  _error_8h_source.html  _graph_8cpp.html  _graph_8cpp__incl.map  _graph_8cpp__incl.md5  _graph_8h.html  _graph_8h__dep__incl.map  _graph_8h__dep__incl.md5  _graph_8h__incl.map  _graph_8h__incl.md5  _graph_8h_source.html  _graph_demo_8cpp.html  _graph_demo_8cpp__incl.map  _graph_demo_8cpp__incl.md5  _graph_demo_8h.html  _graph_demo_8h.js  _graph_demo_8h__dep__incl.map  _graph_demo_8h__dep__incl.md5  _graph_demo_8h__incl.map  _graph_demo_8h__incl.md5  _graph_demo_8h_source.html  _question_8cpp.html  _question_8cpp__incl.map  _question_8cpp__incl.md5  _question_8h.html  (+673 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+42 more)
resx/: config.json  titleText.html
resx/reference/: questionsDatabaseEditRef.html  testingRules.html  titleText.html
resx/theory/: context.html  cycles.html
src/: CMakeLists.txt  Kruskal.pro  README.md  coursework.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  questions.json
src/common/: Error.h  constants.h  documents.cpp  documents.h  htmlviewer.cpp  htmlviewer.h  htmlviewer.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
src/demo/: GraphDemo.cpp  GraphDemo.h  cyclesdemo.cpp  cyclesdemo.h  cyclesdemo.ui  demosystem.cpp  demosystem.h  kruskaldemo.cpp  kruskaldemo.h  kruskaldemo.ui
src/demo/graph/: Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
src/testing/: testing.cpp  testing.h  testingsettingswindow.cpp  testingsettingswindow.h  testingsystem.cpp  testingsystem.h  testingsystem.ui  testingwidget.cpp  testingwidget.h  testingwidget.ui  welcometotesting.cpp  welcometotesting.h  welcometotesting.ui
src/testing/questions/: question.cpp  question.h  questionwidget.cpp  questionwidget.h
src/testing/stat/: Stat.cpp  Stat.h  StatDatabaseViewOption.cpp  StatDatabaseViewOption.h  sessionstat.cpp  sessionstat.h  sessionstatwidget.cpp  sessionstatwidget.h  sessionstatwidget.ui  stat.cpp  stat.h  statdatabaseviewwidget.cpp  statdatabaseviewwidget.h  statdatabaseviewwidget.ui  statviewwidget.cpp  statviewwidget.h  statviewwidget.ui  statwidget.cpp  statwidget.h  statwidget.ui
src/theory/: dictionary.html  kruskal.html  theorysettingswindow.cpp  theorysettingswindow.h  theorysystem.cpp  theorysystem.h
